--- a/releaselogs/refs/tags/v2.3.1.md
+++ b/releaselogs/refs/tags/v2.3.1.md
@@ -1,4 +1,13 @@
 # News added in Jubiter SDK v2.3.1:
++ Differences from V2.2.x:
+  + Rename JUB_GetRootKeyStatus() in JUB_SDK_DEV_NFC.h as JUB_GetDeviceRootKeyStatus(), see 'JUB_SDK_DEV.h'.
+  + Modified JUB_ENUM_COMMODE and added JUB_ENUM_DEVICE_ROOT_KEY_STATUS defination, see 'JUB_SDK_DEV.h'.
+  + Modified param "version" type JUB_CHAR_PTR_PTR to JUB_VERSION_PTR, using applet three-part version number, see 'JUB_SDK_DEV.h':
+  + Abandoned JUB_IsInitialize(), see 'JUB_SDK_DEV.h'.
+  + Abandoned JUB_GetPINRetries(), see 'JUB_SDK_DEV_NFC.h'.
+
+
+-------------------
 + Supports TRX, added functions as below, see 'JUB_SDK_TRX.h':
   + JUB_CreateContextTRX()
   + JUB_GetAddressTRX()
@@ -10,15 +19,16 @@
   + JUB_BuildTRC20Abi()
   + JUB_PackContractTRX()
   
-Note: JUB_PackContractTRX() is  an optional interface, you can organize the contract in protobuf by your own, or using JUB_PackContractTRX() to help you.
+  Note: JUB_PackContractTRX() is  an optional interface, you can organize the contract in protobuf by your own, or using JUB_PackContractTRX() to help you.
 
-The version of Tron's [protocol](https://github.com/tronprotocol/protocol.git) is [GreatVoyage-v4.0.0](https://github.com/tronprotocol/protocol/releases/tag/GreatVoyage-v4.0.0). The protoes we use are:
-  + Tron.proto
-  + Discover.proto
-  + contract/common.proto, 
-  + contract/asset_issue_contract.proto
-  + contract/balance_contract.proto
-  + contract/smart_contract.proto
+  The version of Tron's [protocol](https://github.com/tronprotocol/protocol.git) is [GreatVoyage-v4.0.0](https://github.com/tronprotocol/protocol/releases/tag/GreatVoyage-v4.0.0). The protoes we use are:
+    + Tron.proto
+    + Discover.proto
+    + contract/common.proto
+    + contract/asset_issue_contract.proto
+    + contract/balance_contract.proto
+    + contract/smart_contract.proto
+
 
 -------------------
-’test‘ can be used as an internal test tool.
++ ’test‘ can be used as an internal test tool.
