JUB_GetHDNode & JUB_GetMainHDNode support JUB_ENUM_PUB_FORMAT::XPUB for EOS, XRP and TRX.

--- a/releaselogs/refs/tags/v2.3.6.md
+++ b/releaselogs/refs/tags/v2.3.6.md
@@ -1,4 +1,6 @@
 # News added in Jubiter SDK v2.3.6:
 + JUB_GetHDNodeXRP & JUB_GetMainHDNodeXRP support JUB_ENUM_PUB_FORMAT::XPUB.
++ JUB_GetHDNodeEOS & JUB_GetMainHDNodeEOS support JUB_ENUM_PUB_FORMAT::XPUB.
++ JUB_GetHDNodeTRX & JUB_GetMainHDNodeTRX support JUB_ENUM_PUB_FORMAT::XPUB.
 
 Note: Misc applet version v1.1.7(Blade), v5.1.5(JuBio).
