Let FreezeBalanceContract and UnfreezeBalanceContract support the case of no receiver address

--- a/releaselogs/refs/tags/v2.3.7.md
+++ b/releaselogs/refs/tags/v2.3.7.md
@@ -3,5 +3,6 @@
     + Fix the bug of protobuf serialization for message FreezeBalanceContract and UnfreezeBalanceContract.
     When resource == bandwidth, ProtoBuf will not encode this item. In other words, ProtoBuf does not encode the data item when the enumeration type is 0, so we need to override it's serialize().
     It's known that this bug is not present in ProtoBuf in Dart, but in both C++ and Objective-C.
+    + Let FreezeBalanceContract and UnfreezeBalanceContract support the case of no receiver address.
 
 Note: Misc applet version v1.1.7(Blade), v5.1.5(JuBio).
