--- a/releaselogs/refs/tags/v2.3.8.md
+++ b/releaselogs/refs/tags/v2.3.8.md
@@ -1,6 +1,11 @@
 # News added in Jubiter SDK v2.3.8:
++ Split the JUB_BuildERC/TRCxxxAbi() into two functions, JUB_SetERC/TRCxxxToken() & JUB_BuildERC/TRCxxxTransferAbi().
+     + JUB_SetERC20TokenETH: Set ERC-20 token info to applet.
+     + JUB_BuildERC20TransferAbiETH: Build ERC-20 transfer abi for ETH.
+     + JUB_SetTRC20Token: Set TRC-20 token info to applet.
+     + JUB_BuildTRC20TransferAbi: Build TRC-20 transfer abi for TRX.
 + Supports ERC/TRC-721
-     + JUB_BuildERC721AbiETH: Build ERC-721 TransferFrom ABI(methodID=23b872dd) for ETH.
-     + JUB_BuildTRC721Abi:        Build TRC-721 TransferFrom ABI(methodID=23b872dd) for TRX.
+     + JUB_BuildERC721TransferAbiETH: Build ERC-721 TransferFrom ABI(methodID=23b872dd) for ETH.
+     + JUB_BuildTRC721TransferAbi:        Build TRC-721 TransferFrom ABI(methodID=23b872dd) for TRX.
 
 Note: Misc applet version v1.1.7(Blade), v5.1.5(JuBio).
